[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = "Estudos em flask"
authors = ["Lucas <lukasgds66@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
